# ConnectFourBot

./: README.md  arbitre.cpp  arbitre.h  jeu.cpp.modif  jeu.h.modif  main.cpp
butler/: CMakeLists.txt  arbitre.cpp  arbitre.h  butler.py  joueur.cpp  joueur.h
joueurs/: CMakeLists.txt  joueur_alphabeta_.cpp  joueur_alphabeta_.h  joueur_bjorn.cpp  joueur_bjorn.h  joueur_brutal_.cpp  joueur_brutal_.h  joueur_floki.cpp  joueur_floki.h  joueur_ivar.cpp  joueur_ivar.h  joueur_lagertha.cpp  joueur_lagertha.h  joueur_random.cpp  joueur_random.h
